# aws-cdk-discord-integration

./: .env.template  .gitignore  Cargo.toml  README.md  cdk.json  local.mjs  package.json  test.py  tsconfig-llrt.json  tsconfig.json
.devcontainer/rust/: devcontainer.json
src/api/check-signature/: .gitignore
src/api/check-signature/src/: crypto.ts  example.json  main.ts  test.mjs
src/api/post-discord-to-event/: .gitignore  Cargo.toml
src/api/post-discord-to-event/src/: main.rs
src/api/post-discord-to-event/src/tests/: ping.json
src/commands/: createGlobalCommands.mjs  createGlobalCommands.ts  discord-webhook-handler.ts  types.ts
src/commands/handlers/: fail.ts  hello.ts  index.ts
src/events/: Types.ts
src/events/s3-put-discord-command/: index.ts  test.ts
src/states/fetch-discord-webhook/: index.ts
src/states/fn-respond-to-discord copy/: index.ts
src/states/ping/: index.ts
src/states/settings/: index.ts
src/types/: discord-events.ts
stack/: DiscordIntegrationStack.ts  NodetsFunction.ts  StackDecorator.ts  deploy.ts
