[package]
name = "post-discord-to-event"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-sfn = "1.44.0"
aws_lambda_events = "0.15.1"
base64 = "0.22.1"
lambda_runtime = {version = "*", features = ["tracing"]}
serenity = { version = "*", features = [
    "client",
    "rustls_backend",
    "builder",
    "framework",
    "model",
] }
serde = "1.0.136"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
mockall = "0.13"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4.2"
